--- a/src/routes/category/category.styles.scss
+++ b/src/routes/category/category.styles.scss
@@ -1,7 +1,7 @@
 .category-container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    column-gap: 20x;
+    column-gap: 20px;
     row-gap: 50px;
 }
 
